--- a/ui/src/app/styles/extras.scss
+++ b/ui/src/app/styles/extras.scss
@@ -7,133 +7,16 @@
   text-decoration: inherit;
 }
 
-// .fa {
-//   vertical-align: middle
-// }
-
-// .fa-center {
-//   display: flex !important;
-//   align-items: center;
-//   justify-content: center;
-// }
-
-// .list-inline {
-//   margin-bottom: 0px;
-// }
-
-// .card-columns {
-//   -webkit-column-count: 3;
-//   -moz-column-count: 3;
-//   column-count: 3;
-//   -webkit-column-gap: 1.25rem;
-//   -moz-column-gap: 1.25rem;
-//   column-gap: 1.25rem;
-// }
-
-// .card {
-//   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-//   transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
-// }
-
-// // Disable animations for now
-// // app-discussion-card,
-// // app-community-card,
-// // app-sidebar
-// // {
-// //   .card:hover {
-// //     box-shadow: 0 7px 14px rgba(0, 0, 0, 0.25), 0 5px 5px rgba(0, 0, 0, 0.22);
-// //   }
-// // }
-
-// .label {
-//   vertical-align: middle;
-// }
-
-// .truncate {
-//   display: inline-block;
-//   /* or inline-block */
-//   text-overflow: ellipsis;
-//   word-wrap: break-word;
-//   overflow: hidden;
-//   max-height: inherit;
-//   line-height: inherit;
-// }
-
-// blockquote {
-//   margin: 0 10px .5rem;
-//   padding-left: 10px;
-//   border-left: 3px solid #ccc;
-// }
-
-// .dropdown-menu {
-//   box-shadow: 0 1px 4px rgba(0, 0, 0, .3);
-// }
-
-// .dropdown-menu>li>a {
-//   display: block;
-//   padding: 3px 20px;
-//   clear: both;
-//   font-weight: 400;
-//   line-height: 1.42857143;
-//   // color: #fbfbfb;
-//   white-space: nowrap;
-// }
-
-// .dropdown-menu>li>div>div>p {
-//   margin-bottom: .2rem;
-//   white-space: normal;
-// }
-
-// .dropdown-menu>.active>a,
-// .dropdown-menu>.active>a:focus,
-// .dropdown-menu>.active>a:hover {
-//   color: #fff;
-//   text-decoration: none;
-//   background-color: #337ab7;
-//   outline: 0;
-// }
-
+.form-control {
+  background: transparent !important;
+  border-color: grey;
+  color: grey !important;
+}
 .card-title,
 .card-text,
 .card-text>p {
   margin-bottom: .1rem !important;
 }
-
-// .ng-pristine.ng-invalid {
-//   box-shadow: none;
-// }
-
-
-// .modal-content {
-//   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
-// }
-
-
-// // List group within cards
-// .card {
-//   .list-group {
-//     margin-bottom: 0;
-//   }
-//   .list-group .list-group-item {
-//     border-width: 1px 0;
-//   }
-//   .list-group-item:first-child {
-//     border-top-right-radius: 0;
-//     border-top-left-radius: 0;
-//   }
-//   .list-group .list-group-item:last-child {
-//     border-bottom: 0;
-//   }
-//   margin-bottom: 10px;
-// }
-
-// .list-group-item:last-child {
-//   margin-bottom: -1px;
-// }
-
-// .card-heading + .list-group .list-group-item:first-child {
-//   border-top-width: 0;
-// }
 
 .mark {
   background-color: #424429;
