--- a/ui/src/app/components/discussion/discussion.component.html
+++ b/ui/src/app/components/discussion/discussion.component.html
@@ -2,7 +2,7 @@
   <div *ngIf="discussion" class="col-xs-12 col-lg-10">
     <app-discussion-card [discussion]="discussion" [editing]="editing" (editingChange)="editingChanged($event)"></app-discussion-card>
     <div *ngIf="!editing" class="my-2">
-      <div *ngFor="let comment of comments" class="card mb-1">
+      <div *ngFor="let comment of comments" class="mb-1">
         <app-comment [comment]="comment" [discussion]="discussion" (replyingEvent)="setIsReplying($event)"></app-comment>
       </div>
       <i *ngIf="!comments" class="fa fa-circle-o-notch fa-spin fa-5x fa-center"></i>
