Adding default community chat. Fixes #167.

--- a/ui/src/app/components/discussion-card-sort-select/discussion-card-sort-select.component.html
+++ b/ui/src/app/components/discussion-card-sort-select/discussion-card-sort-select.component.html
@@ -2,7 +2,7 @@
   class="form-control discussion-card-select">
   <option disabled>Sorting</option>
   <option disabled>──────────</option>
-  <option value="modified__desc">New</option>
+  <option value="created__desc">New</option>
   <option value="time-86400">Day</option>
   <option value="time-604800">Week</option>
   <option value="time-2628000">Month</option>
