--- a/ui/src/app/components/comment/comment.component.html
+++ b/ui/src/app/components/comment/comment.component.html
@@ -1,6 +1,6 @@
-<div class="card" [class.border-primary]="comment.stickied">
-  <div [id]="'comment_' + comment.id" class="card-body pb-0">
-    <ul class="list-inline mb-0">
+<div [class.card]="comment.stickied">
+  <div [id]="'comment_' + comment.id" class="card-body py-0">
+    <ul class="comment-border list-inline mb-0" [style.border-left-color]="commentBorderColor()">
       <li class="text-muted list-inline-item pointer" role="button" (click)="collapsed = !collapsed">{{collapseText()}}</li>
       <li class="list-inline-item">
         <a [routerLink]="['/user',comment.user.id]" [ngClass]="{'badge-primary':isCommunityCreator(), 'badge-warning': isCommunityModerator(), 'badge-success': isDiscussionCreator(), 'badge': !isDiscussionUser(), 'text-primary': isDiscussionUser()}">{{comment.user.name}}
@@ -27,73 +27,75 @@
     </ul>
   </div>
   <div *ngIf="!collapsed" class="card-body pt-0">
-    <div *ngIf="!comment.deleted">
-      <div *ngIf="!showEdit" class="card-text" [class.mark]="isCommentNew()" [innerHTML]="comment.text | markdown">
+    <div class="comment-border" [style.border-left-color]="commentBorderColor()">
+      <div *ngIf="!comment.deleted">
+        <div *ngIf="!showEdit" class="card-text" [class.mark]="isCommentNew()" [innerHTML]="comment.text | markdown">
+        </div>
       </div>
-    </div>
-    <div *ngIf="showEdit" class="card-text">
-      <app-markdown-edit [inputText]="comment.text" (textEvent)="setEdit($event)"></app-markdown-edit>
-      <br>
-      <div class="btn-group" role="group">
-        <button class="btn btn-outline-primary" (click)="editMessage()">Edit</button>
-        <button class="btn btn-outline-danger" (click)="hideEdit()">Cancel</button>
+      <div *ngIf="showEdit" class="card-text">
+        <app-markdown-edit [inputText]="comment.text" (textEvent)="setEdit($event)"></app-markdown-edit>
+        <br>
+        <div class="btn-group" role="group">
+          <button class="btn btn-outline-primary" (click)="editMessage()">Edit</button>
+          <button class="btn btn-outline-danger" (click)="hideEdit()">Cancel</button>
+        </div>
       </div>
-    </div>
-    <small *ngIf="!showReply && !showEdit">
-      <ul class="list-inline font-weight-bold text-muted">
-        <span *ngIf="!comment.deleted">
-          <li *ngIf="userService.getUser().id != comment.user.id" class="list-inline-item fa fa-fw fa-arrow-up pointer" [class.text-success]="rank > 50"
-            (click)="upvote()">
+      <small *ngIf="!showReply && !showEdit">
+        <ul class="list-inline font-weight-bold text-muted mb-1">
+          <span *ngIf="!comment.deleted">
+            <li *ngIf="userService.getUser().id != comment.user.id" class="list-inline-item fa fa-fw fa-arrow-up pointer" [class.text-success]="rank > 50"
+              (click)="upvote()">
+            </li>
+            <li *ngIf="userService.getUser().id != comment.user.id" class="list-inline-item fa fa-fw fa-arrow-down pointer" [class.text-danger]="voteExists() && rank < 50"
+              (click)="downvote()">
+            </li>
+            <li *ngIf="userService.getUser().id != comment.user.id" role="button" class="list-inline-item pointer" (click)="toggleShowVoteSlider()">
+              vote
+            </li>
+            <li role="button" class="list-inline-item pointer" (click)="toggleShowReply()">
+              reply
+            </li>
+            <li role="button" *ngIf="isCreator" (click)="toggleShowEdit()" class="list-inline-item pointer">
+              edit
+            </li>
+            <li role="button" *ngIf="isCreator || isModerator" (click)="deleteComment()" class="list-inline-item pointer">
+              delete
+            </li>
+            <li role="button" *ngIf="(isModerator) && !comment.parentId" (click)="toggleStickyComment()" class="list-inline-item pointer">
+              <span *ngIf="comment.stickied">unsticky</span>
+              <span *ngIf="!comment.stickied">make stickied</span>
+            </li>
+          </span>
+          <li *ngIf="comment.parentId" role="button" class="ml-1 list-inline-item">
+            <a class="link-unstyled" [routerLink]="['/discussion', comment.discussionId, 'comment', comment.parentId]">
+              <i class="fa fa-fw fa-level-up" placement="bottom" tooltip="View Parent"></i>
+            </a>
           </li>
-          <li *ngIf="userService.getUser().id != comment.user.id" class="list-inline-item fa fa-fw fa-arrow-down pointer" [class.text-danger]="voteExists() && rank < 50"
-            (click)="downvote()">
+          <li *ngIf="!comment.parentId" role="button" class="ml-1 list-inline-item">
+            <a class="link-unstyled" [routerLink]="['/discussion', comment.discussionId]">
+              <i class="fa fa-fw fa-level-up" placement="bottom" tooltip="View Discussion"></i>
+            </a>
           </li>
-          <li *ngIf="userService.getUser().id != comment.user.id" role="button" class="list-inline-item pointer" (click)="toggleShowVoteSlider()">
-            vote
+          <li *ngIf="comment.id != comment.topParentId || comment.parentId == null" role="button" class="list-inline-item">
+            <a class="link-unstyled" [routerLink]="['/discussion', comment.discussionId, 'comment', comment.id]">
+              <i class="fa fa-fw fa-level-down" placement="bottom" tooltip="View Children"></i>
+            </a>
           </li>
-          <li role="button" class="list-inline-item pointer" (click)="toggleShowReply()">
-            reply
-          </li>
-          <li role="button" *ngIf="isCreator" (click)="toggleShowEdit()" class="list-inline-item pointer">
-            edit
-          </li>
-          <li role="button" *ngIf="isCreator || isModerator" (click)="deleteComment()" class="list-inline-item pointer">
-            delete
-          </li>
-          <li role="button" *ngIf="(isModerator) && !comment.parentId" (click)="toggleStickyComment()" class="list-inline-item pointer">
-            <span *ngIf="comment.stickied">unsticky</span>
-            <span *ngIf="!comment.stickied">make stickied</span>
-          </li>
-        </span>
-        <li *ngIf="comment.parentId" role="button" class="ml-1 list-inline-item">
-          <a class="link-unstyled" [routerLink]="['/discussion', comment.discussionId, 'comment', comment.parentId]">
-            <i class="fa fa-fw fa-level-up" placement="bottom" tooltip="View Parent"></i>
-          </a>
-        </li>
-        <li *ngIf="!comment.parentId" role="button" class="ml-1 list-inline-item">
-          <a class="link-unstyled" [routerLink]="['/discussion', comment.discussionId]">
-            <i class="fa fa-fw fa-level-up" placement="bottom" tooltip="View Discussion"></i>
-          </a>
-        </li>
-        <li *ngIf="comment.id != comment.topParentId || comment.parentId == null" role="button" class="list-inline-item">
-          <a class="link-unstyled" [routerLink]="['/discussion', comment.discussionId, 'comment', comment.id]">
-            <i class="fa fa-fw fa-level-down" placement="bottom" tooltip="View Children"></i>
-          </a>
-        </li>
-      </ul>
-    </small>
-    <div *ngIf="showVoteSlider">
-      <input [value]="rank" (mouseup)="saveRank($event.target.value)" (touchend)="saveRank($event.target.value)" (input)="updateRank($event.target.value)"
-        type="range" min="0" max="100" step="1" class="vote_input" (value)="rank" />
-    </div>
-    <fieldset *ngIf="showReply" class="form-group">
-      <app-markdown-edit (textEvent)="setReply($event)"></app-markdown-edit>
-      <br>
-      <div class="btn-group" role="group">
-        <button class="btn btn-outline-primary" (click)="sendMessage()">Send</button>
-        <button class="btn btn-outline-danger" (click)="hideReply()">Cancel</button>
+        </ul>
+      </small>
+      <div *ngIf="showVoteSlider">
+        <input [value]="rank" (mouseup)="saveRank($event.target.value)" (touchend)="saveRank($event.target.value)" (input)="updateRank($event.target.value)"
+          type="range" min="0" max="100" step="1" class="vote_input" (value)="rank" />
       </div>
-    </fieldset>
+      <fieldset *ngIf="showReply" class="form-group">
+        <app-markdown-edit (textEvent)="setReply($event)"></app-markdown-edit>
+        <br>
+        <div class="btn-group" role="group">
+          <button class="btn btn-outline-primary" (click)="sendMessage()">Send</button>
+          <button class="btn btn-outline-danger" (click)="hideReply()">Cancel</button>
+        </div>
+      </fieldset>
+    </div>
     <div *ngFor="let emb of comment.embedded">
       <app-comment [comment]="emb" [discussion]="discussion" (replyingEvent)="setIsReplying($event)"></app-comment>
     </div>
