--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <a class="navbar-brand" [routerLink]="['/']">
-    <i class="fa fa-fw fa-pencil-square-o"></i>&nbsp;FlowChat</a>
+    <i class="fa fa-fw fa-comment-o"></i>&nbsp;FlowChat</a>
   <div [class.collapse]="collapseNavbar" class="collapse navbar-collapse">
     <ul class="navbar-nav">
 
