--- a/ui/src/app/components/discussion-card/discussion-card.component.html
+++ b/ui/src/app/components/discussion-card/discussion-card.component.html
@@ -8,8 +8,8 @@
             <div [innerHtml]="voteHtml()"></div>
           </ng-template>
           <div class="fa fa-fw fa-arrow-up vote-thumb" [class.pointer]="!this.isCreator"[class.text-success]="discussion.userRank > 50" (click)="upvote()"></div>
-          <div class="pointer vote-number" placement="bottom" placement="right" [tooltip]="voteTemplate" (click)="toggleShowVoteSlider()">{{avgVote()}}</div>
-          <div class="fa fa-fw fa-arrow-down vote-thumb" [class.pointer]="!this.isCreator" [class.text-danger]="voteExists() &&discussion.userRank < 50" (click)="downvote()"></div>
+          <div class="pointer vote-number" placement="bottom" placement="right" [tooltip]="voteTemplate" container="body" (click)="toggleShowVoteSlider()">{{avgVote()}}</div>
+          <div class="fa fa-fw fa-arrow-down vote-thumb" [class.pointer]="!this.isCreator" [class.text-danger]="voteExists() && discussion.userRank < 50" (click)="downvote()"></div>
         </div>
         <div *ngIf="!isCard() && hasImage()" class="col-xs-2 col-sm-2">
           <div [innerHTML]="discussion.link | markdown:true"></div>
@@ -132,8 +132,8 @@
             </div>
           </div>
           <ul class="col-md-6 list-inline form-control-label">
-            <li class="badge badge-primary list-inline-item">
-              <span>{{discussion.community.name}}</span>
+            <li class="list-inline-item">
+              <span>~{{discussion.community.name}}</span>
             </li>
           </ul>
           <div *ngIf="communityTypeaheadNoResults===true" class="">
@@ -165,8 +165,8 @@
             </button>
           </div>
           <ul *ngIf="discussion.tags" class="col-md-6 list-inline form-control-label">
-            <li role="button" (click)="removeTag(tag)" class="badge badge-info list-inline-item" *ngFor="let tag of discussion.tags">
-              <span>{{removeQuotes(tag.name)}}
+            <li role="button" (click)="removeTag(tag)" class="list-inline-item" *ngFor="let tag of discussion.tags">
+              <span>#{{removeQuotes(tag.name)}}
                 <i class="fa fa-fw fa-remove"></i>
               </span>
             </li>
@@ -198,8 +198,8 @@
             </div>
           </div>
           <ul *ngIf="discussion.privateUsers" class="col-md-6 list-inline form-control-label">
-            <li role="button" (click)="removePrivateUser(privateUser)" class="badge badge-info list-inline-item" *ngFor="let privateUser of discussion.privateUsers">
-              <span>{{privateUser.name}}
+            <li role="button" (click)="removePrivateUser(privateUser)" class="list-inline-item" *ngFor="let privateUser of discussion.privateUsers">
+              <span>@{{privateUser.name}}
                 <i class="fa fa-fw fa-remove"></i>
               </span>
             </li>
@@ -219,8 +219,8 @@
             </div>
           </div>
           <ul *ngIf="discussion.blockedUsers" class="col-md-6 list-inline form-control-label">
-            <li role="button" (click)="removeBlockedUser(blockedUser)" class="badge badge-info list-inline-item" *ngFor="let blockedUser of discussion.blockedUsers">
-              <span>{{blockedUser.name}}
+            <li role="button" (click)="removeBlockedUser(blockedUser)" class="list-inline-item" *ngFor="let blockedUser of discussion.blockedUsers">
+              <span>@{{blockedUser.name}}
                 <i class="fa fa-fw fa-remove"></i>
               </span>
             </li>
