Fixing readme, community card editing, loading video thumbnails.

--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -34,6 +34,11 @@
         </a>
       </li>
       <li class="nav-item">
+        <a role="button" class="nav-link" href="https://github.com/dessalines/flowchat/issues" placement="bottom" target="_blank">
+          bugs / features
+        </a>
+      </li>
+      <li class="nav-item">
         <a role="button" class="nav-link" placement="bottom" tooltip="Donate to the developer" href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=2XTHDEBUNQ47U&lc=US&item_name=FlowChat&item_number=flowchat_02&amount=5%2e00&currency_code=USD&bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHosted"
           target="_blank">
           donate
