--- a/ui/src/app/components/community/community.component.html
+++ b/ui/src/app/components/community/community.component.html
@@ -1,7 +1,7 @@
 <div>
   <div class="row mb-2">
     <div class="col-xs-12" [class.col-md-10]="!editing" [class.col-md-12]="editing">
-      <app-community-card *ngIf="community" [community]="community" [(editing)]="editing"></app-community-card>
+      <app-community-card *ngIf="community" [community]="community" [editing]="editing" (editingChange)="editingChanged($event)"></app-community-card>
     </div>
     <div *ngIf="!editing" class="col-xs-12 col-md-2">
       <app-discussion-card-view-type-select *ngIf="false"></app-discussion-card-view-type-select>
