--- a/ui/src/app/components/discussion/discussion.component.html
+++ b/ui/src/app/components/discussion/discussion.component.html
@@ -1,6 +1,6 @@
 <div class="row bottom-margin" (window:scroll)="onScroll($event)">
   <div *ngIf="discussion" class="col-xs-12 col-lg-10">
-    <app-discussion-card [discussion]="discussion" [editing]="editing" (editingChange)="editingChanged($event)"></app-discussion-card>
+    <app-discussion-card [discussion]="discussion" [card]="true" [editing]="editing" (editingChange)="editingChanged($event)"></app-discussion-card>
     <div *ngIf="!editing" class="my-2">
       <div *ngFor="let comment of comments" class="mb-1">
         <app-comment [comment]="comment" [discussion]="discussion" (replyingEvent)="setIsReplying($event)"></app-comment>
@@ -31,8 +31,8 @@
 </div>
 <nav *ngIf="!topParentId && !clearTopReply && !isReplying && !discussion?.deleted && !editing" class="navbar fixed-bottom navbar-dark bg-dark">
   <div class="row col-sm-12">
-    <app-markdown-edit class="col-sm-10 col-md-11" (textEvent)="setTopReply($event)" [rows]="1"></app-markdown-edit>
-    <button (click)="sendTopReply()" class="btn btn-outline-primary col-sm-2 col-md-1 special-nav-button" type="submit">Send</button>
+    <app-markdown-edit class="col-10 col-md-11" (textEvent)="setTopReply($event)" [rows]="1"></app-markdown-edit>
+    <button (click)="sendTopReply()" class="btn btn-sm btn-outline-primary col-2 col-md-1 special-nav-button" type="submit">Send</button>
   </div>
 </nav>
 <div bsModal #reconnectModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
