--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -7,15 +7,11 @@
     <i class="fa fa-fw fa-comment-o"></i>&nbsp;FlowChat</a>
   <div [class.collapse]="collapseNavbar" class="collapse navbar-collapse">
     <ul class="navbar-nav">
-
       <form [formGroup]="discussionSearchForm" class="form-inline">
         <input formControlName="discussionSearchControl" [(ngModel)]="discussionSearchSelected" [typeahead]="discussionSearchResultsObservable"
           (typeaheadOnSelect)="discussionTypeaheadOnSelect($event.item)" [typeaheadOptionField]="'title'" (typeaheadLoading)="discussionChangeTypeaheadLoading($event)"
-          (typeaheadNoResults)="discussionChangeTypeaheadNoResults($event)" [typeaheadWaitMs]="200" class="form-control mr-sm-2 search-box"
+          (typeaheadNoResults)="discussionChangeTypeaheadNoResults($event)" [typeaheadWaitMs]="200" class="form-control mr-sm-2"
           type="text" placeholder="Search" name="discussion_form" autocomplete="off">
-        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">
-          <i class="fa fa-search"></i>
-        </button>
       </form>
     </ul>
     <ul class="navbar-nav ml-2 mr-auto">
@@ -26,16 +22,11 @@
         <button role="button" class="btn btn-outline-primary mr-2" (click)="createCommunity()">Create a community</button>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://github.com/tchoulihan/flowchat" target="_blank">about</a>
+        <a class="nav-link" href="https://github.com/dessalines/flowchat" target="_blank">about</a>
       </li>
       <li class="nav-item">
         <a role="button" class="nav-link" href="https://github.com/dessalines/flowchat" placement="bottom" target="_blank">
           github
-        </a>
-      </li>
-      <li class="nav-item">
-        <a role="button" class="nav-link" href="https://github.com/dessalines/flowchat/issues" placement="bottom" target="_blank">
-          bugs / features
         </a>
       </li>
       <li class="nav-item">
