--- a/ui/src/app/components/new-user-modal/new-user-modal.component.html
+++ b/ui/src/app/components/new-user-modal/new-user-modal.component.html
@@ -1,21 +1,27 @@
-<div bsModal #smModal="bs-modal" class="modal fade"
-  [config]="{backdrop: 'static'}" tabindex="-1" role="dialog"
+<div bsModal #smModal="bs-modal" class="modal fade" [config]="{backdrop: 'static'}" tabindex="-1" role="dialog"
   aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title pull-left">Welcome!</h4>
+        <button type="button" class="close pull-right" aria-label="Close" (click)="dismiss()">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
       <div class="modal-body">
         <form #userForm="ngForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
             <div class="input-group">
-              <input id="new-user-input" type="text" class="form-control"
-                required maxlength="100" pattern="[a-zA-Z0-9_-]+"
-                [(ngModel)]="name" name="name" placeholder="Enter your name...."
-                #namev="ngModel" autofocus="" [class.is-invalid]="!(namev.valid || namev.pristine)">
+              <input id="new-user-input" type="text" class="form-control" required maxlength="100" pattern="[a-zA-Z0-9_-]+"
+                [(ngModel)]="name" name="name" placeholder="Enter a username..." #namev="ngModel" autofocus=""
+                [class.is-invalid]="!(namev.valid || namev.pristine)">
               <span class="input-group-btn">
-                  <button type="submit" class="btn btn-primary btn-block" [disabled]="!userForm.form.valid">Okay</button>
+                <button type="submit" class="btn btn-primary btn-block" [disabled]="!userForm.form.valid">Okay</button>
               </span>
             </div>
-            <div [hidden]="namev.valid || namev.pristine" class="text-danger">Name must be < 100 characters and contain no spaces.
+
+            <div [hidden]="namev.valid || namev.pristine" class="text-danger">Name must be less than 100 characters and
+              contain no spaces.
             </div>
           </div>
         </form>
@@ -25,4 +31,3 @@
   </div>
 </div>
 <app-login-modal *ngIf="showLoginModal" (hideEvent)="hiddenEvent()"></app-login-modal>
-
