Adding version popup. Fixes #204.

--- a/ui/src/app/components/navbar/navbar.component.html
+++ b/ui/src/app/components/navbar/navbar.component.html
@@ -22,7 +22,7 @@
         <button role="button" class="btn btn-outline-primary mr-2" (click)="createCommunity()">Create a community</button>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="https://github.com/dessalines/flowchat" target="_blank">about</a>
+        <a class="nav-link" href="https://github.com/dessalines/flowchat" target="_blank" placement="bottom" [tooltip]="version">about</a>
       </li>
       <li class="nav-item">
         <a role="button" class="nav-link" href="https://github.com/dessalines/flowchat" placement="bottom" target="_blank">
